tdf#96662, only use the crossBetween="midCat" for line and scatter chart

Change-Id: Id2be263daf2c5a9f2d69ed50b79ac029143f02ca
Reviewed-on: https://gerrit.libreoffice.org/29092
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>